# blackhole

./: Cargo.toml  README.md  package.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
crates/blackhole-engine/: Cargo.toml
crates/blackhole-engine-napi/: Cargo.toml
crates/blackhole-engine-napi/src/: lib.rs
crates/blackhole-engine/src/: crypto.rs  csrf.rs  filter.rs  lib.rs  rate_limit.rs  shield.rs  xss.rs
scripts/: copy-napi.mjs
src/: BlackholeProvider.ts  config.ts  core.ts  express.ts  fastify.ts  index.ts  middleware.ts
tests/stubs/: ream-app.ts
tests/unit/: adapters.test.ts  blackhole.test.ts  csrf-enforced.test.ts  middleware.test.ts  parity-fixes.test.ts  security-fixes.test.ts
